--- a/Css Complete Tryout/animations.html
+++ b/Css Complete Tryout/animations.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="box">
-       <p>Moving Animation</p>
+       <p>Moving Animation Display</p>
     </div>
 </body>
 </html>
